dons_tests/valid_kxi/logiv_type_check.kxi
void main(){
    int x = 1;
    char y = 'c';
    x >= 1 || x <= 1;
    x == 1 && y == 'c';
}
