dons_tests/invalid_kxi/bad_logic_type_check.kxi
void main(){
    int x = 1;
    x >= 1 || 5;
    \"apple\" && x == 1;
}
